--- a/roles/run_docker_container/tasks/main.yaml
+++ b/roles/run_docker_container/tasks/main.yaml
@@ -1,13 +1,16 @@
 ---
+# added the following tasks above in case I need to rerun the playbook
+# ignore errors are added on the first 2 plays in case
+# it is first time running the playbook and container does not exist yet
 - name: Stop existing Docker Container (Ubuntu and CentOS)
   ansible.builtin.command:
     cmd: docker stop group6_website_container
+  ignore_errors: yes
 
 - name: Remove existing Docker Container (Ubuntu and CentOS)
   ansible.builtin.command:
     cmd: docker rm group6_website_container
-
-# added the following tasks above in case I need to rerun the playbook
+  ignore_errors: yes
 
 - name: Run Docker Container from built image (Ubuntu and CentOS)
   ansible.builtin.command:
